--- a/common/logger.conf
+++ b/common/logger.conf
@@ -22,7 +22,7 @@ args=(sys.stderr,)
 class=handlers.RotatingFileHandler
 level=DEBUG
 formatter=form01
-args=('/data/yty/log/flask-yty.log', 'a', 100*1024*1024, 5)
+args=('C:\\Users\\yangtingyao\\Desktop\\flask-test-yty\\flask-yty.log', 'a', 100*1024*1024, 5)
 ###############################################
 [formatters]
 keys=form01,form02
